# Conway

./: CMakeLists.txt  Conways.sln  Node.cpp  Node.h  README.md  fragment.glsl  main.cpp
Conways/: Conways.vcxproj  Node.cpp  Node.h  main.cpp
